# MOBILE-VoyagAR-Skeleton

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/jni/: CMakeLists.txt
app/jni/SDL/: CMakeLists.txt
app/jni/SDL/include/SDL3/: SDL.h  SDL_assert.h  SDL_audio.h  SDL_camera.h  SDL_events.h  SDL_gamepad.h  SDL_gpu.h  SDL_hints.h  SDL_joystick.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_pixels.h  SDL_render.h  SDL_stdinc.h  SDL_surface.h  SDL_timer.h  SDL_version.h  SDL_video.h  SDL_vulkan.h
app/jni/SDL/include/build_config/: SDL_build_config.h  SDL_build_config.h.cmake  SDL_build_config_android.h  SDL_build_config_ios.h  SDL_build_config_macos.h  SDL_build_config_minimal.h  SDL_build_config_windows.h  SDL_build_config_wingdk.h  SDL_build_config_xbox.h
app/jni/SDL/src/: SDL.c  SDL_hashtable.h  SDL_internal.h
app/jni/SDL/src/audio/qnx/: SDL_qsa_audio.c
app/jni/SDL/src/dynapi/: SDL_dynapi.c
app/jni/SDL/src/filesystem/gdk/: SDL_sysfilesystem.cpp
app/jni/SDL/src/gpu/vulkan/: SDL_gpu_vulkan.c
app/jni/SDL/src/render/direct3d12/: SDL_shaders_d3d12_xboxone.cpp  SDL_shaders_d3d12_xboxseries.cpp
app/jni/SDL/src/render/opengl/: SDL_render_gl.c  SDL_shaders_gl.c
app/jni/SDL/src/render/opengles2/: SDL_render_gles2.c  SDL_shaders_gles2.c
app/jni/SDL/src/test/: SDL_test_assert.c  SDL_test_common.c  SDL_test_compare.c  SDL_test_crc32.c  SDL_test_font.c  SDL_test_fuzzer.c  SDL_test_harness.c  SDL_test_log.c  SDL_test_md5.c  SDL_test_memory.c
app/jni/SDL/src/time/android/: SDL_systime.c
app/jni/SDL/src/video/: SDL_egl.c  SDL_egl_c.h  SDL_sysvideo.h  SDL_video.c  SDL_vulkan_internal.h
app/jni/SDL/src/video/cocoa/: SDL_cocoaopengl.m  SDL_cocoavideo.h
app/jni/SDL/src/video/kmsdrm/: SDL_kmsdrmvulkan.h
app/jni/SDL/src/video/openvr/: SDL_openvrvideo.c
app/jni/SDL/src/video/qnx/: SDL_qnxkeyboard.c
app/jni/SDL/src/video/raspberry/: SDL_rpivideo.h
app/jni/SDL/src/video/vivante/: SDL_vivantevideo.h
app/jni/SDL/src/video/wayland/: SDL_waylandvulkan.h
app/jni/SDL/src/video/windows/: SDL_windowsopengl.c  SDL_windowsvulkan.h
app/jni/SDL/src/video/x11/: SDL_x11opengl.h  SDL_x11vulkan.h
app/jni/VoyagAR/: CMakeLists.txt
app/jni/VoyagAR/include/: main.h
app/jni/VoyagAR/src/: main.cpp
app/jni/sdl/: CMakeLists.txt
app/jni/voyagAR/: CMakeLists.txt
app/jni/voyagAR/include/: main.h
app/jni/voyagAR/src/: main.cpp
app/libs/SDL/include/build_config/: SDL_build_config_android.h
app/src/androidTest/java/com/example/mobile_voyagar_skeleton/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mobile_voyagar_skeleton/: MainActivity.java
app/src/main/java/org/dlsugamelab/AnitoVoyagARMobile/: AnitoVoyagARMobileMainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mobile_voyagar_skeleton/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
